add:head-table填充数据

--- a/index.html
+++ b/index.html
@@ -32,8 +32,49 @@
           <div class="label">住院病历号</div>
           <div class="value">123456</div>
         </div>
+        <div class="item">
+          <div class="label">入院日期</div>
+          <div class="value">2021-12-01</div>
+        </div>
       </div>
-      <div class="head-table"></div>
+      <div class="head-table">
+        <div class="head-row">
+          <div class="row-label cell">日期</div>
+          <div class="row-values">
+            <div class="cell">2021-12-01</div>
+            <div class="cell">2021-12-02</div>
+            <div class="cell">2021-12-03</div>
+            <div class="cell">2021-12-04</div>
+            <div class="cell">2021-12-05</div>
+            <div class="cell">2021-12-06</div>
+            <div class="cell">2021-12-07</div>
+          </div>
+        </div>
+        <div class="head-row">
+          <div class="row-label cell">住院日数</div>
+          <div class="row-values">
+            <div class="cell">1</div>
+            <div class="cell">2</div>
+            <div class="cell">3</div>
+            <div class="cell">4</div>
+            <div class="cell">5</div>
+            <div class="cell">6</div>
+            <div class="cell">7</div>
+          </div>
+        </div>
+        <div class="head-row">
+          <div class="row-label cell">手术或产后日数</div>
+          <div class="row-values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell">Ⅱ-0</div>
+            <div class="cell">Ⅱ-1</div>
+            <div class="cell">Ⅳ-0</div>
+            <div class="cell">Ⅳ-1</div>
+          </div>
+        </div>
+      </div>
       <div class="main">
         <div class="side-axis"></div>
         <canvas id="canvas1"></canvas>
