--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <div class="value">2021-12-01</div>
         </div>
       </div>
-      <div class="head-table">
-        <div class="head-row">
-          <div class="row-label cell">日期</div>
-          <div class="row-values">
+      <div class="table">
+        <div class="row">
+          <div class="label cell">日期</div>
+          <div class="values">
             <div class="cell">2021-12-01</div>
             <div class="cell">2021-12-02</div>
             <div class="cell">2021-12-03</div>
@@ -50,9 +50,9 @@
             <div class="cell">2021-12-07</div>
           </div>
         </div>
-        <div class="head-row">
-          <div class="row-label cell">住院日数</div>
-          <div class="row-values">
+        <div class="row">
+          <div class="label cell">住院日数</div>
+          <div class="values">
             <div class="cell">1</div>
             <div class="cell">2</div>
             <div class="cell">3</div>
@@ -62,9 +62,9 @@
             <div class="cell">7</div>
           </div>
         </div>
-        <div class="head-row">
-          <div class="row-label cell">手术或产后日数</div>
-          <div class="row-values">
+        <div class="row">
+          <div class="label cell">手术或产后日数</div>
+          <div class="values">
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -74,13 +74,134 @@
             <div class="cell">Ⅳ-1</div>
           </div>
         </div>
+        <div class="row">
+          <div class="label cell">时间</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">坐标轴</div>
+          <div class="values">
+            <canvas width="630px" height="600px"></canvas>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">呼吸</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">血压</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">总入液量</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">大便（次）</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">尿量（ml）</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">其它排出量</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">体重（kg）</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">皮试</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="label cell">其它</div>
+          <div class="values">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+          </div>
+        </div>
       </div>
-      <div class="main">
-        <div class="side-axis"></div>
-        <canvas id="canvas1"></canvas>
-      </div>
-      <div class="foot-table"></div>
-      <div class="pagination"></div>
+      <div class="pagination">第 1 页</div>
     </div>
   </div>
   <canvas id="canvas"></canvas>
