modify:时间横坐标轴

--- a/index.html
+++ b/index.html
@@ -76,18 +76,109 @@
         </div>
         <div class="row">
           <div class="label cell">时间</div>
-          <div class="values">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+          <div class="values x-axis">
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
+            <div class="cell">
+              <div class="am">
+                <div class="text">上午</div>
+                <div class="time-points">
+                  <div>4</div><div>8</div><div>12</div>
+                </div>
+              </div>
+              <div class="pm">
+                <div class="text">下午</div>
+                <div class="time-points">
+                  <div>16</div><div>20</div><div>24</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
-          <div class="label cell">坐标轴</div>
+          <div class="label cell y-axis">纵坐标轴</div>
           <div class="values">
             <canvas width="630px" height="600px"></canvas>
           </div>
