--- a/index.html
+++ b/index.html
@@ -178,7 +178,38 @@
           </div>
         </div>
         <div class="row">
-          <div class="label cell y-axis">纵坐标轴</div>
+          <div class="label cell y-axis">
+            <div class="icons">
+              <div class="icon">口表
+                <svg width="10" height="10">
+                  <circle r="5" cx="5" cy="5" />
+                </svg>
+              </div>
+              <div class="icon">腋表
+                <svg width="10" height="10">
+                  <line x1="0" y1="0" x2="10" y2="10" stroke="blue" fill="transparent" stroke-width="2"/>
+                  <line x1="0" y1="10" y2="0" x2="10" stroke="blue" fill="transparent" stroke-width="2"/>
+                </svg>
+              </div>
+              <div class="icon">肛表
+                <svg width="10" height="10">
+                  <circle r="5" cx="5" cy="5" />
+                  <circle r="3.8" cx="5" cy="5" fill="#fff" />
+                </svg>
+              </div>
+              <div class="icon">脉搏
+                <svg width="10" height="10">
+                  <circle r="5" cx="5" cy="5" fill="red" />
+                </svg>
+              </div>
+            </div>
+            <div class="pulse">
+              <div>脉搏</div>
+            </div>
+            <div class="temperature">
+              <div>体温</div>
+            </div>
+          </div>
           <div class="values">
             <canvas width="630px" height="600px"></canvas>
           </div>
