--- a/index.html
+++ b/index.html
@@ -205,9 +205,29 @@
             </div>
             <div class="pulse">
               <div>脉搏</div>
+              <div class="axis-nums">
+                <div>160</div>
+                <div>140</div>
+                <div>120</div>
+                <div>100</div>
+                <div>80</div>
+                <div>60</div>
+                <div>40</div>
+              </div>
+              
             </div>
             <div class="temperature">
               <div>体温</div>
+              <div class="axis-nums">
+                <div>41</div>
+                <div>40</div>
+                <div>39</div>
+                <div>38</div>
+                <div>37</div>
+                <div>36</div>
+                <div>35</div>
+              </div>
+              
             </div>
           </div>
           <div class="values">
