--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
             </div>
           </div>
           <div class="values">
-            <canvas id="canvas"></canvas>
+            <!-- <canvas id="canvas"></canvas> -->
+            <svg id="svg" width="630" height="600" xmlns="http://www.w3.org/2000/svg"></svg>
           </div>
         </div>
         <div class="row">
@@ -274,6 +275,6 @@
       <div class="pagination">第 1 页</div>
     </div>
   </div>
-  <script src="draw.js"></script>
+  <script src="drawSvg.js"></script>
 </body>
 </html>
