--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
               </div>
               <div class="icon">腋表
                 <svg width="10" height="10">
-                  <line x1="0" y1="0" x2="10" y2="10" stroke="blue" fill="transparent" stroke-width="2"/>
-                  <line x1="0" y1="10" y2="0" x2="10" stroke="blue" fill="transparent" stroke-width="2"/>
+                  <line x1="0" y1="0" x2="10" y2="10" stroke="blue" stroke-width="2"/>
+                  <line x1="0" y1="10" y2="0" x2="10" stroke="blue" stroke-width="2"/>
                 </svg>
               </div>
               <div class="icon">肛表
@@ -275,6 +275,7 @@
       <div class="pagination">第 1 页</div>
     </div>
   </div>
-  <script src="drawSvg.js"></script>
+  <div id="tooltip"></div>
+  <script src="./drawSvg.js"></script>
 </body>
 </html>
