modify:封装成对象

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="A4">
-    <div class="content">
+  <div id="A4"> 
+    <div class="container">
       <div class="title">xxxx医院体温单</div>
       <div class="head-form">
         <div class="item">
@@ -276,6 +276,69 @@
       <div class="pagination">第 1 页</div>
     </div>
   </div>
+  <div id="A4new"></div>
   <script src="./drawSvg.js"></script>
+  <script>
+    const A4new = document.getElementById('A4new')
+    const originData = { // 数据
+      title: 'xxxx医院',
+      baseInfo: [
+        { label: '姓名', value: '张三' },
+        { label: '年龄', value: '25' },
+        { label: '科别', value: '骨科' },
+        { label: '床号', value: '001' },
+        { label: '住院病历号', value: '123456' },
+        { label: '入院日期', value: '2021-12-01 00:00:00' }
+      ],
+      mouthTemperature: [
+        ['2021-12-01 04:00:01',36.2],
+        ['2021-12-02 00:00:00',36.5],
+        ['2021-12-03 12:00:00',36.3],
+        ['2021-12-04 16:00:00',37.1],
+        ['2021-12-05 20:00:00',37],
+        ['2021-12-06 23:59:59',37.2],
+        ['2021-12-07 24:00:00',36.9]
+      ],
+      armpitTemperature: [
+        ['2021-12-01 16:00:00',39.2],
+        ['2021-12-02 16:00:00',39],
+        ['2021-12-03 16:00:00',38.8],
+        ['2021-12-04 16:00:00',38.6],
+        ['2021-12-05 16:00:00',38.4],
+        ['2021-12-06 16:00:00',38.2],
+        ['2021-12-07 16:00:00',38]
+      ],
+      anusTemperature: [
+        ['2021-12-01 04:00:00',37.1],
+        ['2021-12-02 08:00:00',37.4],
+        ['2021-12-03 12:00:00',37.3],
+        ['2021-12-04 16:00:00',38.2],
+        ['2021-12-05 20:00:00',38.4],
+        ['2021-12-06 24:00:00',38.1],
+        ['2021-12-07 16:00:00',38.4]
+      ],
+      pulseFrequency: [
+        ['2021-12-01 08:00:00',150],
+        ['2021-12-02 08:00:00',130],
+        ['2021-12-03 08:00:00',124],
+        ['2021-12-04 08:00:00',124],
+        ['2021-12-05 08:00:00',130],
+        ['2021-12-06 08:00:00',138],
+        ['2021-12-07 08:00:00',160]
+      ],
+      heartFrequency: [
+        ['2021-12-01 08:00:00',140],
+        ['2021-12-02 08:00:00',150],
+        ['2021-12-03 08:00:00',140],
+        ['2021-12-04 08:00:00',130],
+        ['2021-12-05 08:00:00',130],
+        ['2021-12-06 08:00:00',138],
+        ['2021-12-07 08:00:00',160]
+      ],
+      moreData: []
+    }
+    let a = new temperatureChart(A4new, originData)
+    a.update('update')
+  </script>
 </body>
 </html>
