modify:use path

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       ],
       moreData: []
     }
-    let a = new temperatureChart(A4new, originData)
+    let a = new TemperatureChart(A4new, originData)
     a.update('update')
   </script>
 </body>
