feat:添加表格主体

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
   <script>
     const A4new = document.getElementById('A4new')
     const originData = { // 数据
-      title: 'xxxx医院',
+      title: 'xxxx医院体温单',
       baseInfo: [
         { label: '姓名', value: '张三' },
         { label: '年龄', value: '25' },
