--- a/index.html
+++ b/index.html
@@ -37,38 +37,38 @@
           <div class="value">2021-12-01</div>
         </div>
       </div>
-      <table border="1" cellpadding="2" cellspacing="0">
-        <tr class="row">
-          <td class="label cell">日期</td>
-          <td class="cell">2021-12-01</td>
-          <td class="cell">2021-12-02</td>
-          <td class="cell">2021-12-03</td>
-          <td class="cell">2021-12-04</td>
-          <td class="cell">2021-12-05</td>
-          <td class="cell">2021-12-06</td>
-          <td class="cell">2021-12-07</td>
+      <table border="1" cellpadding="2" cellspacing="0" width="100%">
+        <tr>
+          <td style="width: 90px;">日期</td>
+          <td style="width: 90px;">2021-12-01</td>
+          <td style="width: 90px;">2021-12-02</td>
+          <td style="width: 90px;">2021-12-03</td>
+          <td style="width: 90px;">2021-12-04</td>
+          <td style="width: 90px;">2021-12-05</td>
+          <td style="width: 90px;">2021-12-06</td>
+          <td style="width: 90px;">2021-12-07</td>
         </tr>
-        <tr class="row">
-          <td class="label cell">住院日数</td>
-          <td class="cell">1</td>
-          <td class="cell">2</td>
-          <td class="cell">3</td>
-          <td class="cell">4</td>
-          <td class="cell">5</td>
-          <td class="cell">6</td>
-          <td class="cell">7</td>
+        <tr>
+          <td>住院日数</td>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+          <td>4</td>
+          <td>5</td>
+          <td>6</td>
+          <td>7</td>
         </tr>
-        <tr class="row">
-          <td class="label cell">手术或产后日数</td>
-          <td class="cell"></td>
-          <td class="cell"></td>
-          <td class="cell"></td>
-          <td class="cell">Ⅱ-0</td>
-          <td class="cell">Ⅱ-1</td>
-          <td class="cell">Ⅳ-0</td>
-          <td class="cell">Ⅳ-1</td>
+        <tr>
+          <td>手术或产后日数</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Ⅱ-0</td>
+          <td>Ⅱ-1</td>
+          <td>Ⅳ-0</td>
+          <td>Ⅳ-1</td>
         </tr>
-      </table>
+      </table>  
       <div class="table">
         <div class="row">
           <div class="label cell">日期</div>
@@ -308,6 +308,7 @@
       <div class="pagination">第 1 页</div>
     </div>
   </div>
+
   <!-- <div id="A4new"></div> -->
   <script src="./drawSvg.js"></script>
   <script>
