--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="value">2021-12-01</div>
         </div>
       </div>
-      <table border="1" cellpadding="2" cellspacing="0" width="100%">
+      <table border="1" cellpadding="0" cellspacing="0" width="100%">
         <tr>
           <td style="width: 90px;">日期</td>
           <td style="width: 90px;">2021-12-01</td>
@@ -68,67 +68,60 @@
           <td>Ⅳ-0</td>
           <td>Ⅳ-1</td>
         </tr>
+        <tr>
+          <td>时间</td>
+          <td class="time">
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+          <td>
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+          <td>
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+          <td>
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+          <td>
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+          <td>
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+          <td>
+            <div class="up"><div>上午</div><div>下午</div></div>
+            <div class="down">
+              <div>4</div><div>8</div><div>12</div>
+              <div>16</div><div>20</div><div>24</div>
+            </div>
+          </td>
+        </tr>
       </table>  
       <div class="table">
-        <div class="row">
-          <div class="label cell">日期</div>
-          <div class="values">
-            <div class="cell">2021-12-01</div>
-            <div class="cell">2021-12-02</div>
-            <div class="cell">2021-12-03</div>
-            <div class="cell">2021-12-04</div>
-            <div class="cell">2021-12-05</div>
-            <div class="cell">2021-12-06</div>
-            <div class="cell">2021-12-07</div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="label cell">住院日数</div>
-          <div class="values">
-            <div class="cell">1</div>
-            <div class="cell">2</div>
-            <div class="cell">3</div>
-            <div class="cell">4</div>
-            <div class="cell">5</div>
-            <div class="cell">6</div>
-            <div class="cell">7</div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="label cell">手术或产后日数</div>
-          <div class="values">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell">Ⅱ-0</div>
-            <div class="cell">Ⅱ-1</div>
-            <div class="cell">Ⅳ-0</div>
-            <div class="cell">Ⅳ-1</div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="label cell">时间</div>
-          <div class="values x-axis">
-            <div class="up">
-              <div>上午</div><div>下午</div>
-              <div>上午</div><div>下午</div>
-              <div>上午</div><div>下午</div>
-              <div>上午</div><div>下午</div>
-              <div>上午</div><div>下午</div>
-              <div>上午</div><div>下午</div>
-              <div>上午</div><div>下午</div>
-            </div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-              <div>4</div><div>8</div><div>12</div><div>16</div><div>20</div><div>24</div>
-            </div>
-          </div>
-        </div>
         <div class="row">
           <div class="label cell y-axis">
             <div class="icons">
