--- a/index.html
+++ b/index.html
@@ -37,88 +37,73 @@
           <div class="value">2021-12-01</div>
         </div>
       </div>
-      <table border="1" cellpadding="0" cellspacing="0" width="100%">
+      <table border="1" cellpadding="0" cellspacing="0">
         <tr>
-          <td style="width: 90px;">日期</td>
-          <td style="width: 90px;">2021-12-01</td>
-          <td style="width: 90px;">2021-12-02</td>
-          <td style="width: 90px;">2021-12-03</td>
-          <td style="width: 90px;">2021-12-04</td>
-          <td style="width: 90px;">2021-12-05</td>
-          <td style="width: 90px;">2021-12-06</td>
-          <td style="width: 90px;">2021-12-07</td>
+          <td style="width: 108px;">日期</td>
+          <td colspan="6">2021-12-01</td>
+          <td colspan="6">2021-12-02</td>
+          <td colspan="6">2021-12-03</td>
+          <td colspan="6">2021-12-04</td>
+          <td colspan="6">2021-12-05</td>
+          <td colspan="6">2021-12-06</td>
+          <td colspan="6">2021-12-07</td>
         </tr>
         <tr>
           <td>住院日数</td>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-          <td>4</td>
-          <td>5</td>
-          <td>6</td>
-          <td>7</td>
+          <td colspan="6">1</td>
+          <td colspan="6">2</td>
+          <td colspan="6">3</td>
+          <td colspan="6">4</td>
+          <td colspan="6">5</td>
+          <td colspan="6">6</td>
+          <td colspan="6">7</td>
         </tr>
         <tr>
           <td>手术或产后日数</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td>Ⅱ-0</td>
-          <td>Ⅱ-1</td>
-          <td>Ⅳ-0</td>
-          <td>Ⅳ-1</td>
+          <td colspan="6"></td>
+          <td colspan="6"></td>
+          <td colspan="6"></td>
+          <td colspan="6">Ⅱ-0</td>
+          <td colspan="6">Ⅱ-1</td>
+          <td colspan="6">Ⅳ-0</td>
+          <td colspan="6">Ⅳ-1</td>
         </tr>
-        <tr>
-          <td>时间</td>
-          <td class="time">
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
-          <td>
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
-          <td>
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
-          <td>
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
-          <td>
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
-          <td>
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
-          <td>
-            <div class="up"><div>上午</div><div>下午</div></div>
-            <div class="down">
-              <div>4</div><div>8</div><div>12</div>
-              <div>16</div><div>20</div><div>24</div>
-            </div>
-          </td>
+        <tr class="am-pm-row">
+          <td rowspan="2">时间</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+          <td colspan="3">上午</td>
+          <td colspan="3">下午</td>
+        </tr>
+        <tr class="clock-row">
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+          <td>4</td><td>8</td><td>12</td>
+          <td>16</td><td>20</td><td>24</td>
+        </tr>
+        <tr class="svg-row">
+          <td></td>
+          <td colspan="42"></td>
         </tr>
       </table>  
       <div class="table">
